# TankOn

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  run_game.bat
assets/images/Background/Spritesheet/: allSprites_default.xml  (+1 more)
assets/images/Tanks/: TankAligned.psd  Tanks.psd
cmake/: utility.cmake
scripts/: run_game.bat  upload_itch.bat
src/: CMakeLists.txt  macros.hpp  main.cpp  main_client.cpp  main_server.cpp
src/context/: context.hpp  game.hpp  input.cpp
src/engine/: audio.hpp  input.cpp  input.hpp  renderer.cpp  renderer.hpp
src/game/: application.cpp  application.hpp  context.cpp  context.hpp  game.cpp  game.hpp  input.cpp  input.hpp  menu.hpp  player.hpp
src/game/backend/: context.cpp  input.cpp  input.hpp  renderer.cpp  renderer.hpp
src/game/data/: constants.hpp  game_client.cpp  game_client.hpp  game_server.cpp  game_server.hpp  lobby_broadcaster.hpp  lobby_discoverer.hpp  lobby_discovery.hpp  messages.cpp  messages.hpp
src/game/gameplay/: game_client.cpp  game_client.hpp  game_server.cpp  game_server.hpp  message_types.hpp  player.hpp
src/game/menus/: menus.cpp  menus.hpp
src/game/states/: base_state.hpp  game_states.hpp  gameplay_state.cpp  gameplay_state.hpp  lobby_state.cpp  lobby_state.hpp  main_menu_state.cpp  main_menu_state.hpp
src/input/: event_system.cpp  event_system.hpp  signals.hpp
src/math/: aabb.hpp  rect_pack.cpp  rect_pack.hpp  transform2d.hpp  types.hpp  world.hpp
src/network/: client.cpp  client.hpp  connection.cpp  connection.hpp  message_types.hpp  network_common.hpp  server.cpp  server.hpp
src/network/base_classes/: client.cpp  client.hpp  server.cpp  server.hpp
src/network/connection/: connection.cpp  connection.hpp
src/network/containers/: message.hpp  ts_deque.hpp
src/network/tcp/: acceptor.hpp  connection.cpp  connection.hpp  resolver.hpp
src/network/udp/: multicast.hpp  network_discoverer.hpp
src/network/utility/: context_thread.hpp  message.hpp  tick_timer.hpp  ts_deque.hpp
src/resources/: font.cpp  font.hpp  stb_image.cpp  texture.cpp  texture.hpp
src/thread/: task.hpp  thread_pool.cpp  thread_pool.hpp
src/ui/: button.cpp  button.hpp  canvas.hpp  text_box.cpp  text_box.hpp  ui_element.hpp
src/ui/core/: element.hpp  interactable.hpp  menu.cpp  menu.hpp  node.cpp  node.hpp  rect_transform.hpp
src/ui/widgets/: button.cpp  button.hpp  debug_rect.hpp  sprite.cpp  sprite.hpp  text_box.cpp  text_box.hpp  text_input.hpp
src/utility/: cmd_args.hpp  colours.hpp  file_io.cpp  file_io.hpp  helpers.hpp  imgui_common.hpp  log.hpp  sdl_helpers.hpp  timer.hpp  unicode.cpp  unicode.hpp
